--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div class="button-container">
                 <button id="add-item-btn">🔰 Add New</button>
                 <button id="watchlist-btn">📚 Watchlist</button>
+                <button id="sortAZ-btn">🔤 Sort A>Z</button>
             </div>
         </div>
     </header>
